// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <TableRow /> should render correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-top: 1px solid rgba(0,0,0,.12);
}

<div
  className="c0"
  onClick={[Function]}
/>
`;

exports[`component <TableRow /> with children should render correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-top: 1px solid rgba(0,0,0,.12);
}

<div
  className="c0"
  onClick={[Function]}
>
  <td>
    Some Child Cell
  </td>
</div>
`;

exports[`component <TableRow /> with columns should render correctly if a row does not have a keyField 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-top: 1px solid rgba(0,0,0,.12);
}

<div
  className="c0"
  onClick={[Function]}
>
  <WithTheme(TableCell)
    column={
      Object {
        "id": 123,
        "name": "Name",
        "selector": "name",
      }
    }
    key="cell-123-0"
    mobile={false}
    mobileBreakpoint="600px"
    row={
      Object {
        "name": "testname",
      }
    }
    type="cell"
  />
</div>
`;

exports[`component <TableRow /> with columns should render correctly if a row has a keyField 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-top: 1px solid rgba(0,0,0,.12);
}

<div
  className="c0"
  onClick={[Function]}
>
  <WithTheme(TableCell)
    column={
      Object {
        "id": 123,
        "name": "Name",
        "selector": "name",
      }
    }
    key="cell-123-456"
    mobile={false}
    mobileBreakpoint="600px"
    row={
      Object {
        "id": 456,
        "name": "testname",
      }
    }
    type="cell"
  />
</div>
`;

exports[`component <TableRow highlightOnHover /> should render correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-top: 1px solid rgba(0,0,0,.12);
}

.c0:hover {
  background-color: rgba(0,0,0,.08);
  -webkit-transition-duration: 0.15s;
  transition-duration: 0.15s;
  -webkit-transition-property: background-color;
  transition-property: background-color;
}

<div
  className="c0"
  onClick={[Function]}
/>
`;

exports[`component <TableRow pointerOnHover /> should render correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-top: 1px solid rgba(0,0,0,.12);
}

.c0:hover {
  cursor: pointer;
}

<div
  className="c0"
  onClick={[Function]}
/>
`;

exports[`component <TableRow striped /> should render correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  border-top: 1px solid rgba(0,0,0,.12);
}

.c0:nth-child(odd) {
  background-color: rgba(0,0,0,.03);
}

<div
  className="c0"
  onClick={[Function]}
/>
`;
